# crowd.dev

./: .claude.json  .cursorrules  .flake8  .gitignore  .tool-versions  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INVITATION_LINK_IMPLEMENTATION.md  LICENSE  MAINTAINERS.md  Makefile  PREMIUM LICENSE  README.md  jiraAuthenticateValidator.ts  jiraProjectValidator.ts  jiraURLValidator.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.husky/: commit-msg  pre-commit
backend/: .backend.env  .dockerignore  .env.dist  .env.dist.compose  .env.dist.composed  .env.dist.local  .env.dist.prod  .env.dist.staging  .env.local  .env.test  .eslintrc.js  .gitignore  .openapirc.js  .prettierignore  .prettierrc.cjs  .sequelizerc  Dockerfile-backend  Dockerfile-backend-dev  Dockerfile.kube  Dockerfile.kube.dockerignore  Makefile  babel.config.cjs  base.yaml  docker-compose.test.yaml  id-openapi.yaml  jest-setup.js  jest.config.cjs  jest.config.js  openapi.json  package-lock.json  package.json  schema.sql  source-local.sh  test-report.html  tsconfi.json  tsconfig.json
docker/: Dockerfile-db-base  (+6 more)
scripts/: cli  (+8 more)
services/apps/git_integration/: Makefile  README.md  pyproject.toml
services/apps/git_integration/src/: crowdgit-cron  crowdgit-server  install.sh  runner.sh  setup.py
services/apps/git_integration/src/crowdgit/: __init__.py  activity.py  enums.py  errors.py  get_bad_commits.py  get_remotes.py  ingest.py  logger.py  maintainers.py  repo.py  server.py  server_deprecated.py  settings.py
services/apps/git_integration/src/crowdgit/cm_maintainers_data/: enums.py  process_maintainers.py
services/apps/git_integration/src/crowdgit/database/: connection.py  crud.py  registry.py
services/apps/git_integration/src/crowdgit/models/: __init__.py  clone_batch.py  maintainer_info.py  repository.py  service_execution.py
services/apps/git_integration/src/crowdgit/services/: __init__.py  utils.py
services/apps/git_integration/src/crowdgit/services/base/: base_service.py
services/apps/git_integration/src/crowdgit/services/clone/: clone_service.py
services/apps/git_integration/src/crowdgit/services/commit/: activitymap.py  commit_service.py
services/apps/git_integration/src/crowdgit/services/maintainer/: bedrock.py  cm_database.py  maintainer_service.py  scraper.py
services/apps/git_integration/src/crowdgit/services/queue/: queue_service.py
services/apps/git_integration/src/crowdgit/services/software_value/: README.md  config.go  config.toml.example  db.go  db.sql  go.mod  go.sum  main.go  software_value_service.py  types.go
services/apps/git_integration/src/crowdgit/services/software_value/ansible/: playbook.yaml
services/apps/git_integration/src/crowdgit/services/software_value/ansible/templates/: config.toml.j2
services/apps/git_integration/src/crowdgit/services/vulnerability_scanner/: .gitignore  README.md  config.go  db.go  go.mod  go.sum  main.go  types.go  vulnerability_scanner.go  vulnerability_scanner_service.py
services/apps/git_integration/src/crowdgit/worker/: __init__.py  repository_worker.py
services/apps/git_integration/src/prompts/: 0-system.txt  1-parse-message.txt  2-prepare-activities.txt
services/apps/git_integration/src/software-value/: config.go  go.mod  go.sum  types.go
services/apps/git_integration/src/software-value/ansible/templates/: lfx-software-value.service.j2
services/apps/git_integration/src/test/: README.md  conftest.py  test_activity_extraction.py  test_commit_extraction.py  test_extract_activities.py  test_prepare_crowd_activities.py  test_repo.py
services/apps/git_integration/src/test/fixtures/: actual_output.json  build_test_repo.py  expected_activities.json  test_repo_seed.json
services/apps/git_integration/src/test/outputs/: test-repo_actual.json  test-repo_expected.json
(+7085 files in other folders)
